# demyst

./: .demyst_experiments.json  .demyst_report.json  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CI_FIX_REPORT.md  KNOWN_ISSUES.md  LAUNCH_ASSESSMENT.md  LAUNCH_CHECKLIST.md  LOG.md  PHASE_2_PROMPT.md  README.md  SUCCESS_REPORT.md  VALIDATION_PLAN.md  action.yml  debug_units.py  demo.tape  methodology.tex  pyproject.toml  setup.py  task.md  test_demyst_system.py  test_scilint_system.py  walkthrough.md
.claude/: settings.local.json
.claude-plugin/: .mcp.json  QUICKSTART.md  README.md  plugin.json
.claude-plugin/agents/: integrity-reviewer.md
.claude-plugin/commands/: demyst-report.md  demyst-tips.md  demyst.md
.claude-plugin/examples/: challenge_leakage.py  challenge_mirage.py  challenge_phacking.py  github-workflow.yaml  pre-commit-config.yaml
.claude-plugin/hooks/: hooks.json
.claude-plugin/skills/: scientific-integrity.md
.claude/commands/: demyst-challenge.md  demyst-fix.md
.github/workflows/: ci.yml  release.yml
demyst/: __init__.py  __main__.py  cli.py  console.py  exceptions.py  fixer.py  lazy.py  magic.py  main.py  mcp.py  plugins.py  red_team.py  security.py  utils.py  watchdog.py
demyst/agents/: langchain.py
demyst/config/: manager.py  models.py
demyst/engine/: .demyst_report.json  .report.json  cst_transformer.py  mirage_detector.py  parallel.py  transpiler.py  variation_tensor.py  variation_transformer.py
demyst/generators/: __init__.py  paper_generator.py  report_generator.py
demyst/guards/: __init__.py  hypothesis_guard.py  leakage_hunter.py  tensor_guard.py  unit_guard.py
demyst/integrations/: __init__.py  ci_enforcer.py  experiment_trackers.py  jax_hooks.py  torch_hooks.py
demyst/profiles/: base.py  climate.py  economics.py  physics.py
demyst/tests/: conftest.py  test_agent_loop.py  test_cli.py  test_cli_output.py  test_commit_review.py  test_edge_cases.py  test_examples_hypothesis.py  test_examples_leakage.py  test_examples_mirage.py  test_examples_tensor.py  test_examples_units.py  test_fixes_verification.py  test_generators.py  test_guards.py  test_infra_coverage.py  test_integrations.py  test_magic.py  test_mcp.py  test_mirage_fixes.py  test_property_based.py  test_security.py  test_swarm_collapse.py  test_validation.py
demyst/tests/scientific_validation/: test_deep_learning.py  test_dimensional_analysis.py  test_economics.py  test_famous_failures.py  test_leakage_patterns.py  test_mirage_scenarios.py  test_quantum_computing.py  test_statistical_validity.py  utils.py
demyst/tests/scientific_validation/test_performance/: test_perf_smoke.py  test_scalability.py  test_stress.py
demyst/validators/: physics_oracle.py
docs/: HANDOFF_EXAMPLES.md  HN_LAUNCH.md  demonstration.md  quickstart.md  usage.md
docs/specs/: scientific_validation.tex
examples/: .demyst_report.json  .scilint_report.json  biology_gene_expression.py  chemistry_stoichiometry.py  deep_learning_gradient_death.py  ml_data_leakage.py  physics_kinematics.py  random_walk.py  real_world_mirages.py  swarm_collapse.py
examples/configs/: .demystrc.ml.yaml  .demystrc.strict.yaml  .demystrc.yaml  .pre-commit-config.full.yaml  .pre-commit-config.minimal.yaml  clinical.yaml  demyst-ci-strict.yml  demyst-ci.yml  physics.yaml
notebooks/: demo.ipynb  quickstart.ipynb
scilint/: LOG.md  __init__.py  __main__.py  cli.py  fixer.py  main.py
scilint/config/: manager.py
scilint/engine/: mirage_detector.py  transpiler.py  variation_transformer.py
scilint/generators/: __init__.py  paper_generator.py  report_generator.py
scilint/guards/: __init__.py  hypothesis_guard.py  leakage_hunter.py  tensor_guard.py  unit_guard.py
scilint/integrations/: __init__.py  ci_enforcer.py  experiment_trackers.py  jax_hooks.py  torch_hooks.py
scilint/profiles/: base.py  biology.py  neuroscience.py  physics.py
scilint/tests/: .report.json  test_edge_cases.py  test_guards.py  test_integrations.py  test_target.py  test_validation.py
scilint/validators/: physics_oracle.py
(+3 files in other folders)
